	  CONFIG_USER_ENTRYPOINT="nsh_main".
	* libs/stdio/lib_libfread.c and lib_*flush*.c:  Correct a couple of
	  error cases where the lib semaphore was not be released on error
	  exits (thanks Ronen Vainish).  Also, improved some error reporting:
	  the generic ERROR was being used instead of the specific errno
	  value; the errno variable was not always set correctly.
	* tools/mkfsdata.pl: The uIP web server CGI image making perl script was
	  moved from apps/netutils/webserver/makefsdata to nuttx/tools/mkfsdata.pl
	  (Part of a larger change submitted by Max Holtzberg).
	* configs/stm3240g-eval/script/ld.script:  All of the identical ld.script
	  files for the STM3240G-EVAL were replaced by one version in this directory.
	* configs/stm3240g-eval/webserver:  Configuration submitted by Max Holtzberg
	  for testing the changes to the uIP web server (see apps/ChangeLog.txt).
	* lib/stdio/lib_perror.c:  Remove CONFIG_LIBC_PERROR_DEVNAME.  What was I
	  thinking?  Arbitrary streams cannot be shared by different tasks.
	* tools/mksyscall.c, csvparser.c, and csvparser.h: Separate CSV parsing
	  logic from mksyscall.c into files where it can be shared.
	* tools/mksymtab.c:  Add a tool that can be used to convert a CSV file
	  into a NuttX-style symbol table.
	* sched/work_cancel.c:  Fix a bad assertion (reported by Mike Smith)
	* configs/stm3210e-eval/src/up_idle.c:  Correct some power management
	  compilation errors (reported by Diego Sanchez).
	* include/nuttx/wqueue.h, sched/work*, and others:  Added logic to support
	  a second, lower priority work queue (CONFIG_SCHED_LPWORK).
	* arch/arm/src/stm32/stm32_dma.c, chip/stm32*_memorymap.h:  FSMC SRAM is
	  only 16-bits wide and the SDIO DMA must be set up differently.
	* arch/arm/src/stm32/stm32_dma.c:  Back out the 16-bit DMA change. It
	  is incorrect.
	* configs/:  Make use of UART4/5 vs USART4/5 consistent in all places.
	* Kconfig: Serial 2STOP setting must be integer 0/1, not a boolean.
